Added echo feedback loop to STFU audio effect (works better, and more effective))
## Summary
Enhanced the audio delay effect by implementing an echo feedback loop that creates repeating, decaying echoes instead of a single delayed playback.

CHANGES:-
Echo feedback loop: Delay output feeds back into itself with gain reduction, creating multiple decaying echoes
Improved volume control: Separated master gain (200%) from echo decay (40%)
Optimized timing: Reduced delay from 2s to 1s for more responsive echo effect
Code clarity: Added comments documenting signal flow and settings

Technical Details
Old behavior: Single delayed playback after 2 seconds
New behavior: Repeating echoes at 1-second intervals with 40% decay

Signal Flow:
- Dry path: source → masterGain → output
- Echo path: source → delay → echoGain → delay (feedback) → masterGain → output

--- a/index.html
+++ b/index.html
@@ -43,19 +43,40 @@
     <div class="text">STFU</div>
     <div class="hint">tap to shut them up</div>
     <script>
-        document.body.addEventListener('click', async () => {
-            const audioContext = new AudioContext();
-            const mediaStream = await navigator.mediaDevices.getUserMedia({ audio: true });
-            const source = audioContext.createMediaStreamSource(mediaStream);
-            const delayNode = audioContext.createDelay(5);
-            const gainNode = audioContext.createGain();
-            delayNode.delayTime.value = 2;
-            gainNode.gain.value = 0.8;
-            source.connect(delayNode);
-            delayNode.connect(gainNode);
-            gainNode.connect(audioContext.destination);
-            document.querySelector('.hint').style.display = 'none';
-        }, { once: true });
+    document.body.addEventListener('click', async () => {
+        const audioContext = new AudioContext();
+
+        const mediaStream = await navigator.mediaDevices.getUserMedia({ audio: true });
+        const source = audioContext.createMediaStreamSource(mediaStream);
+
+        // Gain nodes
+        const masterGain = audioContext.createGain();
+        const echoGain = audioContext.createGain();
+
+        // Delay node
+        const delay = audioContext.createDelay(5);
+
+        // SETTINGS
+        delay.delayTime.value = 1.0;     // 1 second interval
+        echoGain.gain.value = 0.4;       // controls echo decay
+        masterGain.gain.value = 2.0;     // 200% volume
+
+        // Dry signal (original voice)
+        source.connect(masterGain);
+
+        // Echo loop
+        source.connect(delay);
+        delay.connect(echoGain);
+        echoGain.connect(delay);
+
+        // Send echo to output
+        delay.connect(masterGain);
+
+        // Output
+        masterGain.connect(audioContext.destination);
+
+        document.querySelector('.hint').style.display = 'none';
+    }, { once: true });
     </script>
 </body>
 
